--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/system": "^5.14.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
