--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.19.0",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typeface-poppins": "^1.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
